# banter

./: AUTHORS  Banter.mdp  Banter.mds  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  banter.doap  configure.ac  svn-commit.tmp
Banter/: Account.cs  AccountManagement.cs  ActionManager.cs  AppStyle.cs  AppStyleInfo.cs  Application.cs  AudioView.cs  Avatar.cs  AvatarButton.cs  AvatarManager.cs  AvatarMenuItem.cs  AvatarRequirements.cs  AvatarSelector.cs  CairoHelper.cs  ChangeLog  ChatType.cs  ChatWindow.cs  ChatWindowManager.cs  ComplexMenuItem.cs  Connection.cs  ContactStyle.cs  ContactStyleInfo.cs  Conversation.cs  ConversationManager.cs  Defines.cs  Defines.cs.in  GConfPreferencesProvider.cs  GroupWindow.cs  HIGMessageDialog.cs  InterruptableTimeout.cs  Logger.cs  Makefile.am  Member.cs  MemberList.cs  Message.cs  MessageEngine.cs  MessageStore.cs  MessageStyle.cs  MessageStyleInfo.cs  MessageStyleManager.cs  (+35 more)
data/: Makefile.am  banter.desktop.in  banter.schemas.in
data/Themes/: Makefile.am
data/Themes/MessageStyles/: Template.html
data/images/: Makefile.am
data/sounds/: Makefile.am
docs/: components.txt
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  bs.po  ca.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  fi.po  fr.po  gl.po  hu.po  nb.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  sq.po  sv.po  zh_CN.po
tapioca-sharp/: AUTHORS  ChangeLog  LICENSE  Makefile.am  README  configure.ac.old  tapioca-sharp.mdp  tapioca-sharp.pc.in  tapioca-sharp.snk
tapioca-sharp/tapioca/: AssemblyInfo.cs.in  Avatar.cs  Channel.cs  ChannelTarget.cs  ConfigFileReader.cs  ConfigureDefines.cs.in  Connection.cs  ConnectionGroup.cs  ConnectionManager.cs  ConnectionManagerFactory.cs  ConnectionManagerParameter.cs  Contact.cs  ContactBase.cs  ContactGroup.cs  ContactList.cs  ContactListControl.cs  DBusProxyObject.cs  Enum.cs  GroupManager.cs  Handle.cs  Makefile.am  PrivContactList.cs  StreamAudio.cs  StreamChannel.cs  StreamObject.cs  StreamVideo.cs  TextChannel.cs  TextChannelMessage.cs  UserContact.cs
tapioca-sharp/tapioca/Util/: ConfigFileReader.cs  ManagerFileReader.cs
tapioca-sharp/tests/: ConnectionManagerTest.cs  ConnectionTest.cs  ITest.cs  Main.cs  Makefile.am  tests.mdp
test/StreamObjectTest/: ChatWindow.cs  Main.cs  MainWindow.cs  StreamObjectTest.mdp  VideoWindow.cs
test/StreamObjectTest/gtk-gui/: MainWindow.cs  gui.stetic
test/TelepathyTest/: Main.cs  TelepathyTest.mdp  TelepathyTest.userprefs
